# TRKG-Miner

./: pyproject.toml
data/YAGO4.5/: test.txt  valid.txt
mycode/: apply.py  rule_application.py
